--- a/openapi/components/schemas/Authorizations.yaml
+++ b/openapi/components/schemas/Authorizations.yaml
@@ -17,7 +17,7 @@ properties:
     items:
       type: string
     description: >-
-      If authorizations contains `PassportAuth` this is a required list of visa issuers
+      If authorizations contain `PassportAuth` this is a required list of visa issuers
       (as found in a visa's `iss` claim) that may authorize access to this object. The caller must
       only provide passports that contain visas from this list. It is strongly recommended that the caller
       validate that it is appropriate to send the requested passport/visa to the DRS server to mitigate attacks
@@ -27,7 +27,7 @@ properties:
     items:
       type: string
     description: >-
-      If authorizations contains `BearerAuth` this is an optional list of issuers that may authorize access to this object.
+      If authorizations contain `BearerAuth` this is an optional list of issuers that may authorize access to this object.
       The caller must provide a token from one of these issuers. If this is empty or missing it assumed the caller knows
       which token to send via other means. It is strongly recommended that the caller
       validate that it is appropriate to send the requested token to the DRS server to mitigate attacks
