--- a/openapi/components/parameters/Expand.yaml
+++ b/openapi/components/parameters/Expand.yaml
@@ -10,7 +10,7 @@ description: >-
   included in the result.
 
   If true and the object_id refers to a bundle, then the entire set of objects
-  in the bundle is expanded. That is, if the bundle contains aother bundles,
+  in the bundle is expanded. That is, if the bundle contains other bundles,
   then those other bundles are recursively expanded and included in the result.
   Recursion continues through the entire sub-tree of the bundle.
 
