--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -35,7 +35,7 @@ post:
     This method only needs to be called when using an `AccessMethod` that contains an `access_id`
     (e.g., for servers that use signed URLs for fetching object bytes).
 
-    Method is a POST to accomodate a JWT GA4GH Passport sent in the formData in order to authorize access.
+    Method is a POST to accommodate a JWT GA4GH Passport sent in the formData in order to authorize access.
   operationId: PostAccessURL
   security:
     - PassportAuth: []
