trying to get passport field to show up

--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -30,7 +30,7 @@ post:
         schema:
           type: object
           properties:
-            selection:
+            bulk_object_ids:
               type: array
               items:
                 $ref: '../components/parameters/BulkObjectId.yaml'
