--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -19,6 +19,8 @@ post:
       $ref: '../components/responses/403Forbidden.yaml'
     404:
       $ref: '../components/responses/404NotFoundAccess.yaml'
+    413:
+      $ref: '../components/responses/413RequestTooLarge.yaml'
     500:
       $ref: '../components/responses/500InternalServerError.yaml'
   tags:
