--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -1,10 +1,12 @@
 post:
-  summary: Get URLs for fetching bytes from multiple objects
+  summary: Get URLs for fetching bytes from multiple objects with an optional Passport(s).
   description: >-
     Returns an array of URL objects that can be used to fetch the bytes of multiple `DrsObject`s.
 
     This method only needs to be called when using an `AccessMethod` that contains an `access_id`
     (e.g., for servers that use signed URLs for fetching object bytes).
+
+    Currently this is limited to use passports (one or more) or a single bearer token, so make sure your bulk request is for objects that all use the same passports/token.
   operationId: GetBulkAccessURL
   responses:
     200:
