--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -1,7 +1,37 @@
-post:
-  summary: Get info about multiple DrsObjects.
+options:
+  summary: Get Authorization info about multiple DrsObjects.
+  security:
+    - {}
   description: >-
-    Returns an array of object metadata, and a list of access methods that can be used to fetch objects' bytes.
+    Returns a structure that contains for each DrsObjects a list of `Authorizations` that can be used to determine how to authorize requests to `GetObject` or `PostObject` (or bulk equivalents).
+  operationId: OptionsBulkObject
+  responses:
+    200:
+      $ref: '../components/responses/200OkBulkAuthorizations.yaml'
+    204:
+      $ref: '../components/responses/AuthorizationsNotSupported.yaml'
+    400:
+      $ref: '../components/responses/400BadRequest.yaml'
+    404:
+      $ref: '../components/responses/404NotFoundDrsObject.yaml'
+    405:
+      $ref: '../components/responses/AuthorizationsNotSupported.yaml'
+    500:
+      $ref: '../components/responses/500InternalServerError.yaml'
+  tags:
+    - Objects
+  x-swagger-router-controller: ga4gh.drs.server
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          $ref: '../components/parameters/BulkObjectId.yaml'
+
+post:
+  summary: Get info about multiple DrsObjects with an optional Passport(s).
+  description: >-
+    Returns an array of object metadata, and a list of access methods that can be used to fetch objects' bytes.  Currently this is limited to use passports (one or more) or a single bearer token, so make sure your bulk request is for objects that all use the same passports/token.
   operationId: GetBulkObjects
   parameters:
     - $ref: '../components/parameters/Expand.yaml'
