--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -8,6 +8,8 @@ post:
 
     Currently this is limited to use passports (one or more) or a single bearer token, so make sure your bulk request is for objects that all use the same passports/token.
   operationId: GetBulkAccessURL
+  security:
+    - PassportAuth: []
   responses:
     200:
       $ref: '../components/responses/200OkAccesses.yaml'
