--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -35,6 +35,8 @@ post:
   description: >-
     Returns an array of object metadata, and a list of access methods that can be used to fetch objects' bytes.  Currently this is limited to use passports (one or more) or a single bearer token, so make sure your bulk request is for objects that all use the same passports/token.
   operationId: GetBulkObjects
+  security:
+    - PassportAuth: []
   parameters:
     - $ref: '../components/parameters/Expand.yaml'
   responses:
