--- a/openapi/components/parameters/BulkObjectIdNoPassport.yaml
+++ b/openapi/components/parameters/BulkObjectIdNoPassport.yaml
@@ -3,6 +3,7 @@ description: The object that contains the DRS object IDs array
 properties:
   bulk_object_ids:
     type: array
+    description: DRS object IDs
     items:
       type: string
     description: An array of ObjectIDs.
