--- a/openapi/paths/service-info.yaml
+++ b/openapi/paths/service-info.yaml
@@ -1,7 +1,7 @@
 get:
   summary: Retrieve information about this service
   description: |-
-    Returns information about the DRS service
+    Returns information about the DRS service along with stats pertaning to object file statistics
 
     Extends the
     [v1.0.0 GA4GH Service Info specification](https://github.com/ga4gh-discovery/ga4gh-service-info)
@@ -25,6 +25,10 @@ get:
             "artifact": "drs"
         }
         ...
+        "stats": {
+          "fileCount": 774560,
+          "totalFileSize": 4018437188907752
+        }
     }
     ```
 
