adding the two new variables to the service-info response (objectCloud and totalObjectSize).

--- a/openapi/components/schemas/DrsService.yaml
+++ b/openapi/components/schemas/DrsService.yaml
@@ -6,6 +6,12 @@ properties:
   maxBulkRequestLength:
     type: integer
     description: The max length the bullk request endpoints can handle (>= 1) before generating a 413 error e.g. how long can the arrays bulk_object_ids and bulk_object_access_ids be for this server.  
+  objectCount:
+    type: integer
+    description: The total number of objects in this DRS service.
+  totalObjectSize:
+    type: integer
+    description: The total size of all objects in this DRS service in bytes.  As a general best practice, file bytes are counted for each unique file and not cloud mirrors or other redundant copies.
   type:
     type: object
     required:
