--- a/openapi/paths/service-info.yaml
+++ b/openapi/paths/service-info.yaml
@@ -26,9 +26,11 @@ get:
             "version": "1.5"
         }
         ...
-        "stats": {
-          "objectCount": 774560,
-          "totalObjectSize": 4018437188907752
+        "drs":{
+          "stats": {
+            "objectCount": 774560,
+            "totalObjectSize": 4018437188907752
+          }
         }
     }
     ```
