add duplicate maxBulkRequestLength to avoid breaking change

--- a/openapi/paths/service-info.yaml
+++ b/openapi/paths/service-info.yaml
@@ -27,6 +27,7 @@ get:
         }
         ...
         "drs":{
+          "maxBulkRequestLength": 200,
           "stats": {
             "objectCount": 774560,
             "totalObjectSize": 4018437188907752
