--- a/openapi/components/schemas/DrsService.yaml
+++ b/openapi/components/schemas/DrsService.yaml
@@ -5,7 +5,7 @@ required:
 properties:
   maxBulkRequestLength:
     type: integer
-    description: The max length the bullk request endpoints can handle (>= 1) before generating a 413 error e.g. how long can the arrays bulk_object_ids and bulk_object_access_ids be for this server.  
+    description: The max length the bulk request endpoints can handle (>= 1) before generating a 413 error e.g. how long can the arrays bulk_object_ids and bulk_object_access_ids be for this server.  
   type:
     type: object
     required:
@@ -22,7 +22,7 @@ properties:
     properties:
       maxBulkRequestLength:
         type: integer
-        description: The max length the bullk request endpoints can handle (>= 1) before generating a 413 error e.g. how long can the arrays bulk_object_ids and bulk_object_access_ids be for this server.  
+        description: The max length the bulk request endpoints can handle (>= 1) before generating a 413 error e.g. how long can the arrays bulk_object_ids and bulk_object_access_ids be for this server.  
       objectCount:
         type: integer
         description: The total number of objects in this DRS service.
